Remove some files & change pin assign

--- a/td4.qsf
+++ b/td4.qsf
@@ -46,15 +46,45 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name MIF_FILE rom/rom.mif
-set_global_assignment -name QIP_FILE rom/rom.qip
-set_global_assignment -name VHDL_FILE td4.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_location_assignment PIN_G21 -to clock_in
+set_location_assignment PIN_D2 -to clock_sel
+set_location_assignment PIN_G4 -to iport_data[3]
+set_location_assignment PIN_H6 -to iport_data[2]
+set_location_assignment PIN_H5 -to iport_data[1]
+set_location_assignment PIN_J6 -to iport_data[0]
+set_location_assignment PIN_B1 -to oport_data[3]
+set_location_assignment PIN_B2 -to oport_data[2]
+set_location_assignment PIN_C2 -to oport_data[1]
+set_location_assignment PIN_C1 -to oport_data[0]
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_NCE_PIN OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name VHDL_FILE bench/td4_bench.vhd
+set_global_assignment -name VHDL_FILE registers.vhd
+set_global_assignment -name VHDL_FILE lib/selector_4ch.vhd
+set_global_assignment -name MIF_FILE rom/rom.mif
+set_global_assignment -name QIP_FILE rom/rom.qip
+set_global_assignment -name VHDL_FILE alu.vhd
+set_global_assignment -name VHDL_FILE decoder.vhd
+set_global_assignment -name VHDL_FILE divider.vhd
+set_global_assignment -name VHDL_FILE lib/d_ff.vhd
+set_global_assignment -name VHDL_FILE lib/counter.vhd
+set_global_assignment -name VHDL_FILE reset.vhd
+set_location_assignment PIN_F1 -to n_reset_in
+set_global_assignment -name VHDL_FILE td4.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
